Category select page

--- a/src/index.css
+++ b/src/index.css
@@ -2,18 +2,60 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
+body {
+  margin: 0;
+  font-family: "Montserrat", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+}
+
+textarea:focus,
+input:focus {
+  outline: none;
+}
+@supports (-webkit-touch-callout: none) {
+  .h-screen {
+    height: -webkit-fill-available;
+  }
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  transition: background-color 5000s ease-in-out 0s;
+  -webkit-box-shadow: inherit !important;
+}
+.date_ios {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-color: white;
+  text-align: start;
+  align-items: flex-start;
+  display: flex;
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+  /* display: none; */
+}
+
+.ios-status-bar:before {
+  background-color: rgba(245, 119, 2, 1);
+}
+.ios-status-bar {
+  background-color: rgba(245, 119, 2, 1);
+}
+
+.my-custom-datepicker .react-datepicker__input-container {
+  width: 100%;
+  border-bottom: 1px solid green;
+  z-index: 100;
+}
+
+.my-custom-datepicker .react-datepicker__header {
+  background-color: lightgray;
+}
+
+.my-custom-datepicker .react-datepicker__day {
+  color: blue;
 }
